2010-04-30 robux4/mosu
New 0.9.0 version:
    - fix a memory freeing issue in KaxBlock
    - use the macros from the new libebml 0.8.0 to simplify the element definitions and avoid possible typo bugs
    - fix some building issues on Linux and MinGW
    - add matroska_init() and matroska_done() functions, necessary when used with libebml v2
    - use the new libebml iterators of EbmlMaster where possible


2007-01-19 09:58  robux4

	* trunk/libebml/libebml.proj, trunk/libmatroska/libmatroska.proj,
	  trunk/libmatroska/test/ebml/ebml.proj,
	  trunk/libmatroska/test/mux/mux.proj,
	  trunk/libmatroska/test/tags/tags.proj,
	  trunk/libmatroska/test/test.proj,
	  trunk/libmatroska/test/utf8/utf8.proj: add support for coremake
	  building for the moment the config.h and coremake are referenced
	  by a parent project

2007-01-15 16:01  mosu

	* trunk/libmatroska/debian/changelog,
	  trunk/libmatroska/matroska/KaxVersion.h: Version number upgrade to
	  0.8.1.

2007-01-14 17:20  mosu

	* trunk/libmatroska/matroska/KaxBlock.h,
	  trunk/libmatroska/matroska/KaxCluster.h,
	  trunk/libmatroska/matroska/KaxCuesData.h,
	  trunk/libmatroska/src/KaxBlock.cpp,
	  trunk/libmatroska/src/KaxCues.cpp,
	  trunk/libmatroska/src/KaxCuesData.cpp: Added support for
	  KaxCodecState and for indexing them in the cues.

2006-06-02 14:32  mosu

	* trunk/libmatroska/make/linux/Makefile: Overwrite existing symlinks
	  during install.

2006-03-30 19:57  mosu

	* trunk/libmatroska/make/linux/Makefile: Do not abort if the symlink
	  exists already.

2005-10-18 18:02  mosu

	* trunk/libmatroska/ChangeLog, trunk/libmatroska/debian/changelog:
	  Changed the version in the Debian control file & automatic
	  ChangeLog update.

2005-10-16 13:06  robux4

	* trunk/libmatroska/src/KaxBlock.cpp: libmatroska: set the
	  discardable bit of SimpleBlock correctly

2005-10-16 10:28  robux4

	* trunk/libmatroska/matroska/KaxBlock.h,
	  trunk/libmatroska/src/KaxBlock.cpp: libmatroska: support for