@@ -2,6 +2,8 @@ Include "*/*.proj"
 
 LIB matroska
 {
+  PROJECT_VERSION 1.0.0
+
   INCLUDE .
   EXPINCLUDE .
 
