@@ -27,7 +27,7 @@
 
 /*!
 	\file
-	\version \$Id: KaxDefines.h,v 1.8 2010/04/02 23:26:17 robux4 Exp $
+	\version \$Id$
 	\author Steve Lhomme     <robux4 @ users.sf.net>
 */
 #ifndef LIBMATROSKA_DEFINES_H
@@ -36,7 +36,7 @@
 #include "ebml/EbmlVersion.h"
 #include "ebml/EbmlElement.h"
 
-#if LIBEBML_VERSION >= 0x010000
+#if defined(HAVE_EBML2)
 #define DEFINE_MKX_CONTEXT(a)                DEFINE_xxx_CONTEXT(a,EBML_SemanticGlobal)
 #define DEFINE_MKX_MASTER_CONS(a,b,c,d,e)    DEFINE_xxx_MASTER_CONS(a,b,d,e,EBML_SemanticGlobal)
 #define DEFINE_MKX_MASTER(a,b,c,d,e)         DEFINE_xxx_MASTER(a,b,d,e,EBML_SemanticGlobal)
